kubernetes/manifest-files/ingress-test/apache-dlp.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: apache-dpl
  namespace: ingress-test
  labels: 
    app: web1
spec: 
  replicas: 2 
  selector: 
    matchLabels: 
      app: web-apache 
  template: 
    metadata: 
      labels: 
        app: web-apache
    spec: 
      containers: 
      - image: httpd:latest
        name: apache-cont
        resources: 
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
