kubernetes/manifest-files/ingress-test/nginx-dlp.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-dpl 
  namespace: ingress-test
  labels: 
    app: web2 
spec: 
  replicas: 2 
  selector: 
    matchLabels: 
      app: web-nginx 
  template: 
    metadata: 
      labels: 
        app: web-nginx
    spec: 
      containers: 
      - image: nginx:latest
        name: nginx-cont
        resources: 
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
