kubernetes/manifest-files/ingress-test/nginx-dlp_svc.yaml
apiVersion: v1 
kind: Service
metadata: 
  name: ingress-nginx
  namespace: ingress-test
spec: 
  selector: 
    app: web-nginx
  ports:
  - port: 9154
    targetPort: 80
